<resources>
    <string name="app_name">Rabanales21</string>
    <string name="title_activity_menu">Bienvenido</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Strings Activity Main -->
    <string name="loginEdtUser">Usuario</string>
    <string name="loginEdtPass">Contraseña</string>
    <string name="loginImgUser">Usuario</string>
    <string name="loginImgPass">Contraseña</string>
    <string name="loginImgLogo">Rabanales21</string>
    <string name="loginBtnLog">Iniciar sesión</string>

    <!-- Strings Cambiar Pass -->
    <string name="changePass">Cambiar contraseña</string>
    <string name="confirmPass">Confirmar</string>
    <string name="currentPass">Contraseña actual</string>
    <string name="newPass">Nueva contraseña</string>
    <string name="passSecurity">Seguridad de la contraseña: </string>
    <string name="passAdvices">Use al menos 8 caracteres. Puede contener numeros y letras. No use una contraseña demasiada obvia.</string>
    <string name="emptyPassWarning">Ningún campo puede estar vacio</string>
    <string name="samePassWarning">La contraseña nueva no puede coincidir con la actual</string>
    <string name="shortPassWarning">La contraseña nueva es demasiado corta</string>
    <string name="changeWarning">La contraseña se ha modificado correctamente</string>
    <string name="wrongPassWarning">La contraseña actual no es la correcta</string>
    <string name="difPassWarning">Las contraseñas nuevas no coinciden</string>

    <!-- Strings Fragment Inicio -->
    <string name="welcome">Bienvenido a la aplicacion de \n RABANALES 21</string>
    <string name="nextReserva">Tu próxima reseva</string>
    <string name="noReserva">No tienes ninguna reserva.</string>

    <!-- Strings Reserva Salas -->
    <string name="date">FECHA</string>
    <string name="day">DÍA RESERVA</string>
    <string name="startHour">HORA INICIO</string>
    <string name="endHour">HORA FIN</string>
    <string name="reservar">RESERVAR</string>
    <string name="exitoReserva">RESERVA REALIZADA CON ÉXITO</string>
    <string name="falloReserva">NO SE HA PODIDO REALIZAR LA RESERVA</string>

    <!-- Strings Nav Header Menu -->
    <string name="company">Rabanales 21</string>
    <string name="email">Rabanales21@gmail.com</string>

    <!-- Strings Muestra Salas -->
    <string name="centauroGrande">Sala Centauro Grande</string>
    <string name="capacidadCG">Sala de reuniones con capacidad para 14 personas, equipada con pantalla lcd con conexión al ordenador y papelógrafo.</string>
    <string name="centauroPeq">Sala Centauro Pequeña</string>
    <string name="capacidadCP">Sala de reuniones con capacidad para 8 personas, posibilidad de solicitar proyector y/o papelógrafo.</string>
    <string name="silos">Sala Silos</string>
    <string name="capacidadSil">Sala de reuniones con capacidad para 10 personas, equipada con proyector, pantalla y papelógrafo.</string>
    <string name="formacion">Sala de Formación</string>
    <string name="capacidadFor">Aula con capacidad para 50 personas, equipada con proyector, pantalla y papelógrafo.</string>
    <string name="aldebaran">Sala Aldebarán</string>
    <string name="capacidadAld">Sala de reuniones y/o aula con capacidad para 30 personas, posibilidad de solicitar proyector y/o papelógrafo.</string>

    <!-- Strings Main Activity -->
    <string name="emptyUser">Nombre de usuario incorrecto o vacio</string>
    <string name="wrongUser">Usuario o contraseña incorrectos</string>
    <string name="emptyPass">Contraseña vacia o demasiado corta</string>
    <string name="wrongPass">Contraseña de usuario incorrecta</string>
    <string name="infoLostPass">Para consultar el usuario y la contraseña puede ponerse en contacto con nosotros llamando al <b>957 340 116</b> o vía email: <b>info@rabanales21.com</b>. Gracias por su atención.</string>
    <string name="questionLostPass">¿Ha perdido los datos de su cuenta?</string>

    <!-- Strings Menu Activity -->
    <string name="adminConf">ADMINISTRADOR CONFIRMADO</string>
    <string name="closeConf">¿Está seguro de que desea cerrar sesión?</string>

    <!-- Strings ReservaSalas -->
    <string name="salaCentauroG">SALA CENTAURO GRANDE</string>
    <string name="salaCentauroP">SALA CENTAURO PEQUEÑA</string>
    <string name="salaFormacion">SALA DE FORMACIÓN</string>
    <string name="salaSilos">SALA SILOS</string>
    <string name="salaAldebaran">SALA ALDEBARÁN</string>
    <string name="confReserva">¿Desea realizar la reserva?</string>

    <!-- Strings GestionEmpresas -->
    <string name="anadirEmpresa">Añadir</string>
    <string name="modificarEmpresa">Modificar</string>
    <string name="eliminarEmpresa">Eliminar</string>
    <string name="infoGestionEmpresa">Seleccione una opción:</string>
    <string name="infoBotonBuscar">Para obtener los datos completos de una empresa, introduzca el usuario y pulse Buscar</string>
    <string name="infoBotonBuscado">Para realizar una nueva busqueda, pulse el botón Modificar</string>
    <string name="nodataEmpresa">Deben existir los datos de la empresa</string>
    <string name="wrongOption">No se ha elegido una opción correcta</string>
    <string name="confUserCreated">El usuario se ha creado correctamente</string>
    <string name="repetUser">El usuario ya ha sido creado</string>
    <string name="inexistentUser">El usuario no existe</string>
    <string name="adminUser">Este usuario no se puede modificar</string>
    <string name="confDelete">El usuario se ha eliminado correctamente</string>
    <string name="userNotFound">El usuario no se encontraba en la base de datos</string>
    <string name="confUpdate">El usuario se ha actualizado correctamente</string>
    <string name="noModWarning">No se ha realizado ninguna modificación</string>


    <!-- Strings AdaptadorReservas -->
    <string name="warning">Atención</string>
    <string name="cancelReserva">¿ Cancelar esta reserva ?</string>
    <string name="confirm">Confirmar</string>
    <string name="cancel">Cancelar</string>
    <string name="listado_de_reservas">LISTADO DE RESERVAS</string>
    <string name="d_a">Dïa:</string>
    <string name="usuario">Usuario :</string>
    <string name="hora">Hora:</string>
    <string name="cancelar">Cancelar</string>
    <string name="confCancel">La reserva se ha cancelado correctamente</string>
    <string name="negCancel">No se ha podido cancelar la reserva</string>


</resources>
