<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.rabanales21.rabanales21.MainActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <EditText
        android:id="@+id/edtusuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/loginEdtUser"
        android:inputType="textPersonName"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/edtpass"
        android:layout_marginStart="19dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="23dp"
        app:layout_constraintLeft_toRightOf="@+id/imageView2" />

    <EditText
        android:id="@+id/edtpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/loginEdtPass"
        android:inputType="textPassword"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/btnlogin"
        app:layout_constraintRight_toRightOf="@+id/edtusuario"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="21dp"
        app:layout_constraintLeft_toLeftOf="@+id/edtusuario" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:srcCompat="@mipmap/ic_usuario"
        android:background="@android:color/transparent"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/edtpass"
        app:layout_constraintRight_toRightOf="@+id/imageView3"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="18dp"
        app:layout_constraintLeft_toLeftOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/edtusuario"
        android:contentDescription="@string/loginImgUser"/>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="39dp"
        android:layout_height="0dp"
        app:srcCompat="@android:drawable/ic_secure"
        android:background="@android:color/transparent"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="29dp"
        app:layout_constraintBottom_toBottomOf="@+id/edtpass"
        android:layout_marginTop="3dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="3dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edtpass"
        android:contentDescription="@string/loginImgPass"/>

    <ImageButton
        android:id="@+id/btnlogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginStart="64dp"
        android:background="@android:color/transparent"
        android:onClick="onClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/edtpass"
        app:srcCompat="@mipmap/botoniniciosesion"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        android:contentDescription="@string/loginBtnLog"/>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:srcCompat="@mipmap/logovectorialrabanales"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/loginImgLogo"/>
</android.support.constraint.ConstraintLayout>
